--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>lab-vue</title>
+    <title>实验室后台管理系统</title>
+    <link rel="shortcut icon" href="static/favicon.png"/>
   </head>
   <body>
     <div id="app"></div>
